--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,21 @@
   "name": "Tasker",
   "short_name": "Tasker",
   "description": "Track all your tasks and never miss a deadline",
-  "start_url": "/",
+  "start_url": ".",
+  "scope": ".",
   "display": "standalone",
   "background_color": "#0a1628",
   "theme_color": "#4fc3f7",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/logo-192.jpeg",
+      "src": "logo-192.jpeg",
       "sizes": "192x192",
       "type": "image/jpeg",
       "purpose": "any"
     },
     {
-      "src": "/logo-512.jpeg",
+      "src": "logo-512.jpeg",
       "sizes": "512x512",
       "type": "image/jpeg",
       "purpose": "any"
