--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,17 @@
 {
-  "name": "Tasker",
+  "name": "Tasker - Task Manager",
   "short_name": "Tasker",
-  "description": "Track all your tasks and never miss a deadline",
-  "start_url": ".",
-  "scope": ".",
+  "description": "Track all your tasks and never miss a deadline. Get reminders 5 minutes before and at exact time.",
+  "start_url": "/tasker-app/",
+  "scope": "/tasker-app/",
+  "id": "/tasker-app/",
   "display": "standalone",
   "background_color": "#0a1628",
-  "theme_color": "#4fc3f7",
+  "theme_color": "#8b5cf6",
   "orientation": "portrait-primary",
+  "categories": ["productivity", "utilities"],
+  "lang": "en",
+  "dir": "ltr",
   "icons": [
     {
       "src": "logo-192.jpeg",
@@ -22,16 +26,18 @@
       "purpose": "any"
     },
     {
-      "src": "/logo-192.jpeg",
+      "src": "logo-192.jpeg",
       "sizes": "192x192",
       "type": "image/jpeg",
       "purpose": "maskable"
     },
     {
-      "src": "/logo-512.jpeg",
+      "src": "logo-512.jpeg",
       "sizes": "512x512",
       "type": "image/jpeg",
       "purpose": "maskable"
     }
-  ]
+  ],
+  "screenshots": [],
+  "prefer_related_applications": false
 }
