--- a/manifest.json
+++ b/manifest.json
@@ -14,21 +14,21 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "applogo.jpeg",
+      "src": "logo-512.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "applogo.jpeg",
+      "src": "logo-192.png",
       "sizes": "192x192",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "applogo.jpeg",
+      "src": "logo-512.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "maskable"
     }
   ],
